--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
+    "tailwindcss": "^3.4.17",
+    "web-vitals": "^4.2.4"
   }
 }
