--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nextui-org/modal": "^2.2.7",
     "@nextui-org/react": "^2.6.11",
+    "@nextui-org/system": "^2.4.6",
+    "@nextui-org/theme": "^2.4.5",
+    "bootstrap": "^5.3.3",
     "cra-template-typescript": "1.2.0",
-    "framer-motion": "^11.17.0",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^11.18.0",
     "lucide-react": "^0.471.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1"
   },
