--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@nextui-org/modal": "^2.2.7",
     "@nextui-org/react": "^2.6.11",
     "@nextui-org/system": "^2.4.6",
