--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@nextui-org/modal": "^2.2.7",
     "@nextui-org/react": "^2.6.11",
     "@nextui-org/system": "^2.4.6",
