--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nextui-org/system": "^2.4.6",
     "@nextui-org/theme": "^2.4.5",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.1",
     "cra-template-typescript": "1.2.0",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
