--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@nextui-org/modal": "^2.2.7",
-    "@nextui-org/react": "^2.6.11",
-    "@nextui-org/system": "^2.4.6",
-    "@nextui-org/theme": "^2.4.5",
+    "@heroui/modal": "^2.2.12",
+    "@heroui/react": "^2.7.4",
+    "@heroui/system": "^2.4.11",
+    "@heroui/theme": "^2.4.11",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "cra-template-typescript": "1.2.0",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
-    "framer-motion": "^11.18.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.471.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
