--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "@heroui/react": "^2.7.4",
     "@heroui/system": "^2.4.11",
     "@heroui/theme": "^2.4.11",
-    "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "cra-template-typescript": "1.2.0",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
+    "flag-icons": "^7.3.2",
     "framer-motion": "^11.18.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0"
