--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.18.2",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
+    "ky": "^1.8.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
     "react": "^19.0.0",
@@ -32,7 +33,10 @@
     "start": "vite",
     "build": "vite build",
     "tsc": "tsc",
-    "dev": "vite"
+    "dev": "vite",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -56,20 +60,25 @@
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@jest/globals": "^29.7.0",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "jest": "^27.5.1",
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.3.2",
     "typescript": "^5.7.3",
     "vite": "^6.1",
     "vite-tsconfig-paths": "^4.3.2",
