--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
+    "dotenv": "^16.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
@@ -81,6 +82,7 @@
     "ts-jest": "^29.3.2",
     "typescript": "^5.7.3",
     "vite": "^6.1",
+    "vite-plugin-env-compatible": "^2.0.1",
     "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^4.2.4"
   }
